<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_discover"
        android:icon="@drawable/different_squares"
        android:title="@string/title_discover" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/magnifying_glass"
        android:title="@string/title_search" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/profile_user"
        android:title="@string/title_profile" />

    <item
        android:id="@+id/navigation_review"
        android:icon="@drawable/ic_review"
        android:title="@string/title_review" />

    <item
        android:id="@+id/navigation_newsfeed"
        android:icon="@drawable/newsfeed"
        android:title="@string/title_news_feed" />

</menu>
