<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_discover">

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.vn.itplus.myrelish.ui.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/navigation_discover"
        android:name="com.vn.itplus.myrelish.ui.discover.DiscoverFragment"
        android:label="@string/title_discover"
        tools:layout="@layout/fragment_discover" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.vn.itplus.myrelish.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_review"
        android:name="com.vn.itplus.myrelish.ui.reviews.ReviewsFragment"
        android:label="@string/title_review"
        tools:layout="@layout/fragment_reviews" />

    <fragment
        android:id="@+id/navigation_newsfeed"
        android:name="com.vn.itplus.myrelish.ui.newsfeed.NewsfeedFragment"
        android:label="@string/title_news_feed"
        tools:layout="@layout/fragment_newsfeed" />
</navigation>